@@ -41,9 +41,9 @@ public final class HeatExchangerMachine extends NoEnergyMultiblockMachine implem
         water = FluidRecipeCapability.CAP.of(recipe.inputs.get(FluidRecipeCapability.CAP).get(1)).getFluid() == Fluids.WATER;
         var result = ParallelLogic.accurateParallel(this, getRecipeBuilder()
                 .inputFluids(FluidRecipeCapability.CAP.of(recipe.inputs
-                        .get(FluidRecipeCapability.CAP).get(0).getContent()))
+                        .get(FluidRecipeCapability.CAP).getFirst()))
                 .outputFluids(FluidRecipeCapability.CAP.of(recipe.outputs
-                        .get(FluidRecipeCapability.CAP).get(0).getContent()))
+                        .get(FluidRecipeCapability.CAP).getFirst()))
                 .duration(200)
                 .buildRawRecipe(), Integer.MAX_VALUE);
         if (result == null) return null;
